--- a/srcs/requirements/nginx/static/cv.html
+++ b/srcs/requirements/nginx/static/cv.html
@@ -19,7 +19,7 @@
 			<p>Some text some text some text some text..</p>
 			<p>OUIN</p>
 			<div class="picture-profil">
-				<img src="../stock/gp1.jpeg">
+				<img src="gp1.jpeg">
 			</div>
 		</div>
 		<div id="xp">
